<resources>
    <string name="app_name">Tokoku</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="btn_add_text">Add</string>
    <string name="btn_update_text">Update</string>
    <string name="btn_delete_text">Delete</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="btn_login_text">Login</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="pemasok">Pemasok</string>
    <string name="stok">Stok</string>
    <string name="tanggal">Tanggal</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="id">ID :</string>
    <string name="nama">Nama</string>
    <string name="dialog_info_title">Info</string>
    <string name="dialog_info_detail">Aplikasi merupakan aplikasi pengelolaan barang, silahkan login dengan username nico(karyawan) atau admin(admin) dengan password 123456</string>
    <string name="dialog_ok">ok</string>
    <string name="dialog_update_barang_title">Update Barang</string>
    <string name="dialog_ya">ya</string>
    <string name="dialog_tidak">tidak</string>
    <string name="dialog_update_barang_detail">Apakah anda yakin mengupdate barang %s?</string>
    <string name="dialog_delete_barang_title">Hapus Barang</string>
    <string name="dialog_delete_barang_detail">Apakah anda yakin menghapus barang %s?</string>
    <string name="dialog_update_karyawan_title">Update Karyawan</string>
    <string name="dialog_delete_karyawan_title">Delete Karyawan</string>
    <string name="dialog_update_karyawan_detail">Apakah anda yakin mengupdate karyawan %s?</string>
    <string name="dialog_delete_karyawan_detail">Apakah anda yakin menghapus karyawan %s?</string>
    <string name="maximal_karyawan_alert">Karyawan yang dimiliki maksmal 5</string>
    <string name="kelola_karyawan">Kelola Karyawan</string>
    <string name="kelola_barang">Kelola Barang</string>
    <string name="dialog_keluar_title">Keluar</string>
    <string name="dialog_keluar_detail">Apakah anda ingin keluar?</string>
    <string name="exit_text">Tekan kembali lagi untuk keluar</string>
    <string name="login_text">login</string>
    <string name="edit_karyawan">Edit Karyawan</string>
    <string name="edit_barang">Edit Barang</string>
</resources>
